--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,12 @@ button {
 
 .header {
     background-color: #1F2937;
-    width: 100%;
+    
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding-right: 10rem;
+    padding-left: 10rem;
 }
 
 .header h3 {
@@ -35,6 +37,8 @@ button {
     background-color: #1F2937;
     display: flex;
     justify-content: center;
+    padding-right: 10rem;
+    padding-left: 10rem;
 }
 
 .hero-title {
@@ -57,6 +61,8 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-right: 10rem;
+    padding-left: 10rem;
 }
 
 .random-title {
@@ -75,6 +81,8 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-right: 10rem;
+    padding-left: 10rem;
 }
 
 .testimonial-container {
@@ -100,6 +108,8 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-right: 10rem;
+    padding-left: 10rem;
 }
 
 .cta-container {
