--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ button {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-right: 10rem;
-    padding-left: 10rem;
+    padding-right: 15%;
+    padding-left: 15%;
 }
 
 .header h3 {
@@ -37,8 +37,8 @@ button {
     background-color: #1F2937;
     display: flex;
     justify-content: center;
-    padding-right: 10rem;
-    padding-left: 10rem;
+    padding-right: 15%;
+    padding-left: 15%;
 }
 
 .hero-title {
@@ -61,8 +61,8 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-right: 10rem;
-    padding-left: 10rem;
+    padding-right: 15%;
+    padding-left: 15%;
 }
 
 .random-title {
@@ -81,8 +81,8 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-right: 10rem;
-    padding-left: 10rem;
+    padding-right: 15%;
+    padding-left: 15%;
 }
 
 .testimonial-container {
@@ -108,8 +108,8 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-right: 10rem;
-    padding-left: 10rem;
+    padding-right: 15%;
+    padding-left: 15%;
 }
 
 .cta-container {
