--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,8 @@ button {
     justify-content: center;
     padding-right: 15%;
     padding-left: 15%;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
 }
 
 .hero-title {
@@ -128,6 +130,8 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 .cta-left {
