--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@ body {
     margin: 0;
 }
 
+h1, h2, h3, h4 {
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
 button {
     background-color: #3882F6;
 }
