--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,10 @@ h1, h2, h3, h4, p {
 
 button {
     background-color: #3882F6;
+    border-radius: 8px;
+    font-size: 18px;
+    padding: .5em 2em .5em 2em;
+    font-weight: bold;
 }
 
 .header {
@@ -77,7 +81,6 @@ button {
 .hero-signup {
     border: 0;
     color: #E5E7EB;
-    font-weight: bold;
 }
 
 .hero-image-placeholder {
@@ -169,6 +172,7 @@ button {
 
 .call-to-action-signup {
     border-color: #E5E7EB;
+    border: 2px solid #E5E7EB;
     color: #E5E7EB;
 }
 
