--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,8 @@ button {
 }
 
 .header h3 {
+    display: flex;
+    align-items: center;
     color: #F9FAF8;
     font-size: 24px;
 }
@@ -76,6 +78,7 @@ button {
 .hero-text {
     color: #E5E7EB;
     font-size: 18px;
+    margin-block-end: 1em;
 }
 
 .hero-signup {
@@ -99,6 +102,8 @@ button {
     align-items: center;
     padding-right: 15%;
     padding-left: 15%;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
 .random-title {
@@ -114,12 +119,21 @@ button {
 }
 
 .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     max-width: 13%;
 }
 
 .card-image {
-    padding: 3rem;
+    width: 0;
+    border-radius: 8px;
+    padding: 4rem;
     border: 2px solid #3882F6;
+}
+
+.card-subtext {
+    text-align: center;
 }
 
 .content-testimonial {
@@ -130,6 +144,8 @@ button {
     align-items: center;
     padding-right: 15%;
     padding-left: 15%;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
 }
 
 .testimonial-container {
@@ -158,16 +174,22 @@ button {
     align-items: center;
     padding-right: 15%;
     padding-left: 15%;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
     color: #E5E7EB;
 }
 
 .cta-container {
+    border-radius: 8px;
     background-color: #3882F6;
     display: flex;
-    justify-content: center;
+    flex-basis: 100%;
+    justify-content: space-between;
     align-items: center;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    padding-left: 6rem;
+    padding-right: 6rem;
 }
 
 .call-to-action-signup {
